--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,18 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    {% assign authors = "" | split: "|" %}
+
+    {% for item in page.author %}
+      {% assign people = site.data.people[item] %}
+      {% assign authors = authors | push: people.name %}
+    {% endfor %}
+
+    {% if authors.size > 0 %}
+      {% assign author = authors | join: ", " %}
+    {% endif %}
+
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ author }}</span></span>{% endif %}</p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
