--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,7 @@ $on-laptop:        800px;
     border-style: solid;
     padding: 20px;
     margin-bottom: 50px;
+    page-break-after: always;
     h2 {
         text-transform: uppercase;
         margin-bottom: 0px;
