Agregada Practica MR

--- a/_layouts/practica.html
+++ b/_layouts/practica.html
@@ -19,7 +19,7 @@ layout: default
     {% endif %}
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content exercise" itemprop="articleBody">
     {{ content }}
   </div>
 
