--- a/css/main.scss
+++ b/css/main.scss
@@ -61,3 +61,9 @@ $on-laptop:        800px;
     }
 }
 
+.post-content.exercise{
+    h4 {
+        font-size: 16px;
+        font-weight: bold;
+    }
+}
