--- a/assets/main.scss
+++ b/assets/main.scss
@@ -65,5 +65,8 @@ $on-laptop:        800px;
     h4 {
         font-size: 16px;
         font-weight: bold;
+        border-bottom-color: $text-color;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
     }
 }
