--- a/_layouts/ejercicios-ar.html
+++ b/_layouts/ejercicios-ar.html
@@ -1,17 +1,15 @@
 ---
 layout: default
-title:  "Ejercicios Álgebra Relacional"
-date:   2018-08-26 20:26:49 -0300
-categories: practicas ar
-type: draft
 ---
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-   <div data-ra-type="content" class="container-fluid">
-    <div data-ra-type="exercise" id="accordion">
+{{ content }}
+
+<div data-ra-type="content" class="container-fluid">
+    <div data-ra-type="exercise" id="accordion{exerciceId}">
         <h4 data-ra-type="exerciseTitle"></h2>
         <p data-ra-type="exerciseDescription">Dado el siguiente esquema de relacion:</p>
         <pre data-ra-type="tables"></pre>
@@ -24,7 +22,7 @@ type: draft
                 </h5>
                 </div>
             
-                <div id="collapse{statementId}" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion">
+                <div id="collapse{statementId}" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion{exerciceId}">
                     <div class="card-body">
                         <div data-ra-type="statementDescription"></div>
                         <p>Resultado Esperado:</p>
@@ -41,7 +39,7 @@ type: draft
 <script src="/assets/ar/main.js" type="text/javascript"></script>
 <script>
     var contentDiv = document.getElementById("content");
-    main.buildHtmlAsync('/assets/ar/', 'exercises.json').then(() => {
+    main.buildHtmlAsync('/assets/ar/', '{{page.exercise}}').then(() => {
         //After document is built
     })
 </script>
