--- a/_layouts/ejercicios-ar.html
+++ b/_layouts/ejercicios-ar.html
@@ -22,10 +22,8 @@ layout: default
         <div data-ra-type="statementList">
             <div class="card" data-ra-type="statement">
                 <div class="card-header" id="heading{statementId}">
-                <h5 class="mb-0">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{statementId}" aria-expanded="true" 
-                    aria-controls="collapseOne" data-ra-type="statementTitle"></button>
-                </h5>
+                    aria-controls="collapseOne" data-ra-type="statementTitle" style="white-space: normal;text-align: left;"></button>
                 </div>
             
                 <div id="collapse{statementId}" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion{exerciceId}">
