--- a/_layouts/ejercicios-ar.html
+++ b/_layouts/ejercicios-ar.html
@@ -43,7 +43,7 @@ layout: default
 <script src="/assets/ar/main.js" type="text/javascript"></script>
 <script>
     var contentDiv = document.getElementById("content");
-    main.buildHtmlAsync('/assets/ar/', '{{page.exercise}}').then(() => {
+    main.buildHtmlAsync('{{page.exercise_path}}', '{{page.exercise}}').then(() => {
         //After document is built
     })
 </script>
