--- a/_layouts/ejercicios-ar.html
+++ b/_layouts/ejercicios-ar.html
@@ -10,6 +10,9 @@ layout: default
     .error {
         color: red;
     }
+    .wrapper {
+        max-width: 100%;
+    }
 </style>
 
 {{ content }}
