--- a/_layouts/ejercicios-ar.html
+++ b/_layouts/ejercicios-ar.html
@@ -5,6 +5,8 @@ layout: default
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
 
 <style>
     .error {
@@ -12,6 +14,9 @@ layout: default
     }
     .wrapper {
         max-width: 100%;
+    }
+    mjx-container{
+        text-align: left!important;
     }
 </style>
 
@@ -34,7 +39,14 @@ layout: default
                         <div data-ra-type="statementDescription"></div>
                         <p>Resultado Esperado:</p>
                         <div data-ra-type="expected" name="expected"></div>
-                        <textarea class='form-control' name='raExercise' data-ra-type="raExpression"></textarea>
+                        <div class="row">
+                            <div class="col">
+                                <textarea class='form-control' name='raExercise' data-ra-type="raExpression" rows="8" placeholder="Escriba la consulta aqui"></textarea>
+                            </div>
+                            <div class="col">
+                                <p name='resultExpression' data-ra-type="resultExpression"></p>
+                            </div>
+                        </div>
                         <input type='button' value='Ejecutar' data-ra-type="run">
                         <div data-ra-type="result" name="result"></div>
                     </div>
@@ -43,10 +55,16 @@ layout: default
         </div>
     </div>
 </div>
+<script src="/assets/ar/runtime.js" type="text/javascript"></script>
 <script src="/assets/ar/main.js" type="text/javascript"></script>
 <script>
+    var latexCallback = () => {
+        console.log("Refreshing RA expression");
+        MathJax.typeset();
+    }
+
     var contentDiv = document.getElementById("content");
-    main.buildHtmlAsync('/assets/ar/', '{{page.exercise_path}}', '{{page.exercise}}').then(() => {
+    main.buildHtmlAsync('/assets/ar/', '{{page.exercise_path}}', '{{page.exercise}}', latexCallback).then(() => {
         //After document is built
     })
 </script>
